--- a/css/styles.css
+++ b/css/styles.css
@@ -20,17 +20,16 @@
   --active-btn-color: #2196f3;
   --logo-color: #000000;
 }
-
-body {
+html {
   background-color: var(--background-color);
+}
+body {
+  background-color: var(--header-color);
+  font-family: Roboto, sans-serif;
 }
 
 ul {
   list-style: none;
-}
-
-footer {
-  background-color: var(--footer-color);
 }
 
 /* ШАПКА */
@@ -60,7 +59,6 @@ header {
 
 /* nav */
 .nav-link {
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -75,7 +73,6 @@ header {
 
 /* contacts */
 .head-contacts {
-  font-family: Roboto;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
@@ -95,7 +92,6 @@ header {
 }
 
 .main-title {
-  font-family: Roboto;
   font-weight: 900;
   font-size: 44px;
   line-height: 60px;
@@ -107,13 +103,103 @@ header {
 
 .main-title-btn {
   font-family: Roboto;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 16px;
   line-height: 30px;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #ffffff;
   background-color: #2196f3;
+}
+
+/* Чем мы лучше */
+
+.title-2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.title-3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #212121;
+}
+
+.text-1 {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: rgba(117, 117, 117, 1);
+}
+
+/* КОМАНДА */
+.team {
+  background-color: var(--foreground-color);
+}
+.name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: #212121;
+}
+
+.prof {
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.03em;
+  color: rgba(117, 117, 117, 1);
+}
+
+/* ФУТЕР */
+footer {
+  background-color: var(--footer-color);
+}
+.foot-adr {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.foot-cont {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* ПОРТФОЛИО */
+
+.filter-btn {
+  background-color: var(--background-color);
+  color: var(--text-2-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.filter-btn:focus,
+.filter-btn:hover {
+  background-color: var(--active-btn-color);
+  color: var(--header-color);
+}
+.port-title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+.port-text {
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
 }
