--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ footer {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  font-style: normal;
   color: #ffffff;
 }
 
@@ -172,6 +173,7 @@ footer {
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+  text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
 
